--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="page-content">
 <h1 id="main-head">Coding Quiz Challenge</h1>
 <p id="main-p">You will have 75 seconds to complete 10 correlated questions
-    each incorrect answer will deduct 10 seconds from your time. Goodluck </p>
+    each incorrect answer will deduct 10 seconds from your time. Goodluck! </p>
     <button id="startBtn">Start Quiz</button>
 
 <script src="./assets/script.js"></script>
