--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <header class="header">
-
+<!-- display 'vier high score' button and timer -->
         <button class="View-high-score">View High Scores</button>
         <div id="timer">Time: 0</div>
     </header>
     <main class="page-content">
+        <!-- to display quiz -->
 <h1 id="main-head">Coding Quiz Challenge</h1>
 <p id="main-p">You will have 75 seconds to complete 10 correlated questions
     each incorrect answer will deduct 10 seconds from your time. Goodluck! </p>
     <button id="startBtn">Start Quiz</button>
+</main>
+<script src="./assets/js/script.js"></script>
 
-<script src="./assets/script.js"></script>
 
-
-
-    </main>
 </body>
 </html>
