--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
 <!-- display 'vier high score' button and timer -->
-        <button class="View-high-score">View High Scores</button>
+        <button class="view-high-score">View High Scores</button>
         <div id="timer">Time: 0</div>
     </header>
     <main class="page-content">
@@ -20,7 +20,7 @@
     each incorrect answer will deduct 10 seconds from your time. Goodluck! </p>
     <button id="startBtn">Start Quiz</button>
 </main>
-<script src="./assets/js/script.js"></script>
+<script src="./assets/js/questions.js"></script>
 
 
 </body>
